// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcBadge > should render as expected with a number value 1`] = `
<span
  class="ec-badge ec-badge--info"
  data-test="ec-badge"
>
  
  1
  
</span>
`;

exports[`EcBadge > should render as expected with a string value 1`] = `
<span
  class="ec-badge ec-badge--info"
  data-test="ec-badge"
>
  
  Random value
  
</span>
`;

exports[`EcBadge > should render with the default slot given 1`] = `
<span
  class="ec-badge ec-badge--info"
  data-test="ec-badge"
>
  
   Custom: a random value
  
</span>
`;

exports[`EcBadge > should use the type "error" 1`] = `
<span
  class="ec-badge ec-badge--error"
  data-test="ec-badge"
>
  
  A random value
  
</span>
`;

exports[`EcBadge > should use the type "info" 1`] = `
<span
  class="ec-badge ec-badge--info"
  data-test="ec-badge"
>
  
  A random value
  
</span>
`;

exports[`EcBadge > should use the type "success" 1`] = `
<span
  class="ec-badge ec-badge--success"
  data-test="ec-badge"
>
  
  A random value
  
</span>
`;

exports[`EcBadge > should use the type "warning" 1`] = `
<span
  class="ec-badge ec-badge--warning"
  data-test="ec-badge"
>
  
  A random value
  
</span>
`;
